Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/IP_PayProfile__c.object-meta.xml
<CustomObject>
    <label>Pay Profile</label>
    <nameField>
        <displayFormat>IN{00000000}</displayFormat>
        <label>Pay Profile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pay Profiles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>