Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/fields/AutoID__c.field-meta.xml
<CustomField>
    <fullName>AutoID__c</fullName>
    <displayFormat>JA{00000000}</displayFormat>
    <label>Auto ID</label>
    <type>AutoNumber</type>
</CustomField>