Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <formula>IP_Candidate__r.Brand__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brand</label>
    <type>Text</type>
</CustomField>