Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/fields/Date_P45_Requested__c.field-meta.xml
<CustomField>
    <fullName>Date_P45_Requested__c</fullName>
    <label>Leaver Requested Date</label>
    <type>Date</type>
</CustomField>