Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/fields/For_P45_batch__c.field-meta.xml
<CustomField>
    <fullName>For_P45_batch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field to check that we do not face any issue with batch in the trigger of pay profile</description>
    <label>For P45 batch</label>
    <type>Checkbox</type>
</CustomField>