Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/fields/IP_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>IP_Account_Number__c</fullName>
    <formula>IF(NOT(ISBLANK(IP_AccountNumber__c)),LEFT( IP_AccountNumber__c,2) &amp; &apos;****&apos; &amp; RIGHT(IP_AccountNumber__c,2),&apos;&apos;)</formula>
    <label>Account Number</label>
    <type>Text</type>
</CustomField>