Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/fields/IP_AccountNumber__c.field-meta.xml
<CustomField>
    <fullName>IP_AccountNumber__c</fullName>
    <label>Account Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>