Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/fields/IP_AccountNumberSalted__c.field-meta.xml
<CustomField>
    <fullName>IP_AccountNumberSalted__c</fullName>
    <defaultValue>&apos;12345678&apos;</defaultValue>
    <label>AccountNumberSalted</label>
    <length>8</length>
    <type>Text</type>
</CustomField>