Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/fields/IP_BankAccountName__c.field-meta.xml
<CustomField>
    <fullName>IP_BankAccountName__c</fullName>
    <description>This is the name on the account</description>
    <inlineHelpText>This is the name on the account</inlineHelpText>
    <label>Account Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>