Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/fields/IP_Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>IP_Branch_Code__c</fullName>
    <label>Branch Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>