Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/fields/IP_Building_Society_Roll_No__c.field-meta.xml
<CustomField>
    <fullName>IP_Building_Society_Roll_No__c</fullName>
    <formula>IF(NOT(ISBLANK(IP_BuildingSocietyNumber__c)),LEFT( IP_BuildingSocietyNumber__c,1) &amp; &apos;****&apos; &amp; RIGHT(IP_BuildingSocietyNumber__c,1),&apos;&apos;)</formula>
    <label>Building Society Roll No.</label>
    <type>Text</type>
</CustomField>