Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/fields/IP_BuildingSocietyNumber__c.field-meta.xml
<CustomField>
    <fullName>IP_BuildingSocietyNumber__c</fullName>
    <label>Building Society Roll No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>