Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/fields/IP_BusinessAddressCounty__c.field-meta.xml
<CustomField>
    <fullName>IP_BusinessAddressCounty__c</fullName>
    <label>Business Address County</label>
    <length>100</length>
    <type>Text</type>
</CustomField>