Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/fields/IP_BusinessAddressLine1__c.field-meta.xml
<CustomField>
    <fullName>IP_BusinessAddressLine1__c</fullName>
    <description>for recording the business address for the candidate, LTD, umbrella, etc. only is required</description>
    <label>Business Address Line 1</label>
    <length>40</length>
    <type>Text</type>
</CustomField>