Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/fields/IP_BusinessAddressLine2__c.field-meta.xml
<CustomField>
    <fullName>IP_BusinessAddressLine2__c</fullName>
    <label>Business Address Line 2</label>
    <length>40</length>
    <type>Text</type>
</CustomField>