Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/fields/IP_BusinessAddressPostcode__c.field-meta.xml
<CustomField>
    <fullName>IP_BusinessAddressPostcode__c</fullName>
    <label>Business Address Postcode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>