Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/fields/IP_BusinessAddressTown__c.field-meta.xml
<CustomField>
    <fullName>IP_BusinessAddressTown__c</fullName>
    <label>Business Address Town</label>
    <length>40</length>
    <type>Text</type>
</CustomField>