Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/fields/IP_Candidate__c.field-meta.xml
<CustomField>
    <fullName>IP_Candidate__c</fullName>
    <label>Candidate</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Pay Profiles</relationshipLabel>
    <relationshipName>Pay_Profiles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>