Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/fields/IP_Candidate_Branch__c.field-meta.xml
<CustomField>
    <fullName>IP_Candidate_Branch__c</fullName>
    <formula>IP_Candidate__r.IP_TempestDepartment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Candidate Branch</label>
    <type>Text</type>
</CustomField>