Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/fields/IP_CertificateOfIncorporation__c.field-meta.xml
<CustomField>
    <fullName>IP_CertificateOfIncorporation__c</fullName>
    <externalId>true</externalId>
    <label>Certificate of Incorporation</label>
    <length>13</length>
    <type>Text</type>
</CustomField>