Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/fields/IP_CompanyName__c.field-meta.xml
<CustomField>
    <fullName>IP_CompanyName__c</fullName>
    <label>Company Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>