Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/fields/IP_Derogated__c.field-meta.xml
<CustomField>
    <fullName>IP_Derogated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Derogated</label>
    <type>Checkbox</type>
</CustomField>