Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/fields/IP_DirectTemp__c.field-meta.xml
<CustomField>
    <fullName>IP_DirectTemp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if a candidate is a direct temp. Applicable to Tate only.</description>
    <inlineHelpText>Indicates if a candidate is a direct temp. Applicable to Tate only.</inlineHelpText>
    <label>Direct Temp</label>
    <type>Checkbox</type>
</CustomField>