Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/fields/IP_EmailPayslip__c.field-meta.xml
<CustomField>
    <fullName>IP_EmailPayslip__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Email Payslip</label>
    <type>Checkbox</type>
</CustomField>