Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/fields/IP_EmergencyPull__c.field-meta.xml
<CustomField>
    <fullName>IP_EmergencyPull__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emergency Pull</label>
    <type>Checkbox</type>
</CustomField>