Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/fields/IP_FirstPass__c.field-meta.xml
<CustomField>
    <fullName>IP_FirstPass__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Pass</label>
    <type>Checkbox</type>
</CustomField>