Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/fields/IP_GUID__c.field-meta.xml
<CustomField>
    <fullName>IP_GUID__c</fullName>
    <label>GUID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>