Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/fields/IP_MissingPayrollDetail__c.field-meta.xml
<CustomField>
    <fullName>IP_MissingPayrollDetail__c</fullName>
    <inlineHelpText>If there is missing payroll information this will be listed here</inlineHelpText>
    <label>Missing Payroll Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>