Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/fields/IP_NewStarterTaxStatus__c.field-meta.xml
<CustomField>
    <fullName>IP_NewStarterTaxStatus__c</fullName>
    <label>New Starter Tax Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>