Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/fields/IP_PayFrequency__c.field-meta.xml
<CustomField>
    <fullName>IP_PayFrequency__c</fullName>
    <label>Pay Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
                <default>true</default>
                <label>Weekly</label>
            </value>
            <value>
                <fullName>Monthly</fullName>
                <isActive>false</isActive>
                <label>Monthly</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>