Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/fields/IP_PaymentType__c.field-meta.xml
<CustomField>
    <fullName>IP_PaymentType__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BACS</fullName>
                <default>true</default>
                <label>BACS</label>
            </value>
            <value>
                <fullName>Cheque</fullName>
                <isActive>false</isActive>
                <label>Cheque</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>