Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/fields/IP_Payprofile18difgit__c.field-meta.xml
<CustomField>
    <fullName>IP_Payprofile18difgit__c</fullName>
    <formula>CASESAFEID( Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payprofile18difgit</label>
    <type>Text</type>
</CustomField>