Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/fields/IP_PayrollID__c.field-meta.xml
<CustomField>
    <fullName>IP_PayrollID__c</fullName>
    <description>Payroll ID</description>
    <externalId>true</externalId>
    <label>Payroll ID</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>