Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/fields/IP_PrimaryPayMethod__c.field-meta.xml
<CustomField>
    <fullName>IP_PrimaryPayMethod__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Pay Profile</label>
    <type>Checkbox</type>
</CustomField>