Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/fields/IP_Self_Bill_Enabled__c.field-meta.xml
<CustomField>
    <fullName>IP_Self_Bill_Enabled__c</fullName>
    <label>Self Bill Enabled</label>
    <length>20</length>
    <type>Text</type>
</CustomField>