Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/fields/IP_Self_Bill_Expiry__c.field-meta.xml
<CustomField>
    <fullName>IP_Self_Bill_Expiry__c</fullName>
    <label>Self Bill Expiry</label>
    <length>30</length>
    <type>Text</type>
</CustomField>