Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/fields/IP_Self_Enabled__c.field-meta.xml
<CustomField>
    <fullName>IP_Self_Enabled__c</fullName>
    <formula>IF((NOT(ISBLANK(IP_Self_Bill_Enabled__c)) &amp;&amp; CONTAINS(&apos;T&apos;, IP_Self_Bill_Enabled__c)),True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Self Bill Enabled</label>
    <type>Checkbox</type>
</CustomField>