Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/fields/IP_Self_Expiry__c.field-meta.xml
<CustomField>
    <fullName>IP_Self_Expiry__c</fullName>
    <formula>IF(ISBLANK(IP_Self_Bill_Expiry__c),&apos;&apos;,IF(CONTAINS(IP_Self_Bill_Expiry__c,&quot;00000000&quot;),IP_Self_Bill_Expiry__c,RIGHT(IP_Self_Bill_Expiry__c,2)+&apos;/&apos;+ MID(IP_Self_Bill_Expiry__c, 5, 2) +&apos;/&apos;+LEFT(IP_Self_Bill_Expiry__c,4)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Self Bill Expiry</label>
    <type>Text</type>
</CustomField>