Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/fields/IP_Sort_Code__c.field-meta.xml
<CustomField>
    <fullName>IP_Sort_Code__c</fullName>
    <formula>IF(NOT(ISBLANK(IP_SortCode__c)),LEFT( IP_SortCode__c,1) &amp; &apos;****&apos; &amp; RIGHT(IP_SortCode__c,1),&apos;&apos;)</formula>
    <label>Sort Code</label>
    <type>Text</type>
</CustomField>