Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/fields/IP_SortCode__c.field-meta.xml
<CustomField>
    <fullName>IP_SortCode__c</fullName>
    <label>Sort Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>