Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/fields/IP_SortCodeSalted__c.field-meta.xml
<CustomField>
    <fullName>IP_SortCodeSalted__c</fullName>
    <defaultValue>&apos;123456&apos;</defaultValue>
    <label>SortCodeSalted</label>
    <length>6</length>
    <type>Text</type>
</CustomField>