Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/fields/IP_TermsOfEngagement__c.field-meta.xml
<CustomField>
    <fullName>IP_TermsOfEngagement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Terms of Engagement</label>
    <type>Checkbox</type>
</CustomField>