Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/fields/IP_UmbrellaName__c.field-meta.xml
<CustomField>
    <fullName>IP_UmbrellaName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Umbrella Company</label>
    <referenceTo>IP_Umbrellalist__c</referenceTo>
    <relationshipLabel>Pay Profiles</relationshipLabel>
    <relationshipName>Pay_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>