Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/fields/IP_VATNumber__c.field-meta.xml
<CustomField>
    <fullName>IP_VATNumber__c</fullName>
    <label>VAT Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>