Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/fields/IP_VATRegistered__c.field-meta.xml
<CustomField>
    <fullName>IP_VATRegistered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VAT Registered</label>
    <type>Checkbox</type>
</CustomField>