Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/fields/Manual_Update_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Manual_Update_Date_Time__c</fullName>
    <label>Manual Update Date/Time</label>
    <type>DateTime</type>
</CustomField>