Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/fields/Manually_Updated_By__c.field-meta.xml
<CustomField>
    <fullName>Manually_Updated_By__c</fullName>
    <label>Manually Updated By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>