Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/fields/newemail__c.field-meta.xml
<CustomField>
    <fullName>newemail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>newemail</label>
    <type>Checkbox</type>
</CustomField>