Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/fields/OK_to_Supply_Formula__c.field-meta.xml
<CustomField>
    <fullName>OK_to_Supply_Formula__c</fullName>
    <formula>CASE( IP_OkToSupply__c , 
1, &quot;Yes&quot;, 
0, &quot;No&quot;,
&quot;&quot;)</formula>
    <label>OK to Supply</label>
    <type>Text</type>
</CustomField>