Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/fields/P45_Date_by_Head_Office__c.field-meta.xml
<CustomField>
    <fullName>P45_Date_by_Head_Office__c</fullName>
    <label>P45 Emailed Date</label>
    <type>Date</type>
</CustomField>