Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/fields/P45_Initiated__c.field-meta.xml
<CustomField>
    <fullName>P45_Initiated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>P45 Initiated</label>
    <type>Checkbox</type>
</CustomField>