Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/fields/P45_Requested__c.field-meta.xml
<CustomField>
    <fullName>P45_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Leaver?</label>
    <type>Checkbox</type>
</CustomField>