Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/fields/P45_Requested_By__c.field-meta.xml
<CustomField>
    <fullName>P45_Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>P45 Requested By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pay_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>