Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/fields/Reason_for_Leaving1__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Leaving1__c</fullName>
    <label>Reason for Leaving</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pay - Not Enough</fullName>
            </value>
            <value>
                <fullName>Pay - Incorrect</fullName>
            </value>
            <value>
                <fullName>Unsuitable Work</fullName>
            </value>
            <value>
                <fullName>Not Enough Work</fullName>
            </value>
            <value>
                <fullName>Work Break</fullName>
            </value>
            <value>
                <fullName>Better Opportunity</fullName>
            </value>
            <value>
                <fullName>Worker Performance/Compliance Issue</fullName>
            </value>
            <value>
                <fullName>Employed by Client</fullName>
            </value>
            <value>
                <fullName>Dismissal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>