Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/fields/Reason_for_P45_Internal__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_P45_Internal__c</fullName>
    <label>Reason for P45 (Internal)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resigned</fullName>
            </value>
            <value>
                <fullName>Declined work</fullName>
            </value>
            <value>
                <fullName>Other dismissal</fullName>
            </value>
            <value>
                <fullName>Automatic</fullName>
            </value>
            <value>
                <fullName>Transferred to LTD</fullName>
            </value>
            <value>
                <fullName>Branch Transfer/BM</fullName>
                <isActive>false</isActive>
                <label>Branch Transfer/BM</label>
            </value>
            <value>
                <fullName>Eight Week Leaver/PE</fullName>
                <isActive>false</isActive>
                <label>Eight Week Leaver/PE</label>
            </value>
            <value>
                <fullName>Payroll Leaver/PL</fullName>
                <isActive>false</isActive>
                <label>Payroll Leaver/PL</label>
            </value>
            <value>
                <fullName>Payroll holiday/PH</fullName>
                <isActive>false</isActive>
                <label>Payroll holiday/PH</label>
            </value>
            <value>
                <fullName>Payroll inactive/PI</fullName>
                <isActive>false</isActive>
                <label>Payroll inactive/PI</label>
            </value>
            <value>
                <fullName>T.U.P.E transfers/TU</fullName>
                <isActive>false</isActive>
                <label>T.U.P.E transfers/TU</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>