Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/fields/workers_field_change__c.field-meta.xml
<CustomField>
    <fullName>workers_field_change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>workers field change</label>
    <type>Checkbox</type>
</CustomField>