Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/recordTypes/LTD.recordType-meta.xml
<RecordType>
    <fullName>LTD</fullName>
    <active>true</active>
    <label>LTD</label>
</RecordType>