Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/recordTypes/PAYE.recordType-meta.xml
<RecordType>
    <fullName>PAYE</fullName>
    <active>true</active>
    <label>PAYE</label>
</RecordType>