Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/recordTypes/Umbrella.recordType-meta.xml
<RecordType>
    <fullName>Umbrella</fullName>
    <active>true</active>
    <label>Umbrella</label>
</RecordType>