Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/validationRules/Account_name_can_not_be_null.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_name_can_not_be_null</fullName>
    <active>true</active>
    <errorConditionFormula>if(AND(IP_AccountNumber__c !=Null|| IP_SortCode__c !=Null,IP_BuildingSocietyNumber__c ==Null),
IF(IP_BankAccountName__c==null,True,False),False)</errorConditionFormula>
    <errorMessage>Account name can not be null</errorMessage>
</ValidationRule>