Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/validationRules/Account_number_can_not_be_null.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_number_can_not_be_null</fullName>
    <active>true</active>
    <errorConditionFormula>IF( IP_BankAccountName__c !=Null &amp;&amp; NOT($Profile.Name == &apos;Inquiry Profile&apos;) &amp;&amp; NOT($Profile.Name == &apos;User Portal&apos;),
IF(IP_AccountNumber__c==Null|| IP_SortCode__c ==Null ||NOT(REGEX(IP_AccountNumber__c, &quot;[0-9]{8}&quot;))||NOT(REGEX(IP_SortCode__c, &quot;[0-9]{6}&quot;)),True,False)
,False)</errorConditionFormula>
    <errorDisplayField>IP_BankAccountName__c</errorDisplayField>
    <errorMessage>Account number and sort code can not be null. If filled, Account number must be 8 digit numeric and Sort code must be 6 digit numeric.</errorMessage>
</ValidationRule>