Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/validationRules/BA_LTD.validationRule-meta.xml
<ValidationRule>
    <fullName>BA_LTD</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				RecordType.Id = &quot;0120Y000000FISX&quot;,
				 Text($User.Brand__c) = &quot;Blue Arrow&quot;
)</errorConditionFormula>
    <errorMessage>Blue Arrow users cannot create/modify LTD pay profiles</errorMessage>
</ValidationRule>