Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/validationRules/Bank_Account_details_can_not_be_null.validationRule-meta.xml
<ValidationRule>
    <fullName>Bank_Account_details_can_not_be_null</fullName>
    <active>true</active>
    <description>Bank_Account_details_can_not_be_null if we have building society number</description>
    <errorConditionFormula>if( IP_BuildingSocietyNumber__c !=null,
If(IP_BankAccountName__c ==null,true,false),false)</errorConditionFormula>
    <errorMessage>Bank Account details can not be null</errorMessage>
</ValidationRule>