Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/validationRules/Birth_date_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Birth_date_validation</fullName>
    <active>false</active>
    <errorConditionFormula>IF(RecordType.DeveloperName==&apos;PAYE&apos;,
	IF(YEAR(TODAY())- YEAR( IP_Candidate__r.Birthdate ) &lt; 16 || ISBLANK(IP_Candidate__r.Birthdate),True,False),
	 ISBLANK(IP_Candidate__r.sirenum__National_Insurance__c)
	 
)</errorConditionFormula>
    <errorMessage>On Candidate Page - Candidate Age should be greater than 16 years and Profile should be PAYE  OR Candidate National Insurance 
 should not be blank for Ltd &amp; Umbrella Profile</errorMessage>
</ValidationRule>