Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/validationRules/Borrowed_Temp_Candidate.validationRule-meta.xml
<ValidationRule>
    <fullName>Borrowed_Temp_Candidate</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(IP_Candidate__r.IP_BorrowedTemp__c, &quot;Yes&quot;)</errorConditionFormula>
    <errorMessage>Pay profile can not be created for &apos;Borrowed Temp Candidate&apos;</errorMessage>
</ValidationRule>