Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/validationRules/Company_Reg_No.validationRule-meta.xml
<ValidationRule>
    <fullName>Company_Reg_No</fullName>
    <active>true</active>
    <errorConditionFormula>IF(RecordType.Name = &quot;LTD&quot;,IF(IP_CompanyRegNo__c != Null,NOT(REGEX(IP_CompanyRegNo__c ,&quot;[0-9]{8}|[a-zA-Z]{2}[0-9]{6}&quot;)),FALSE),FALSE)</errorConditionFormula>
    <errorDisplayField>IP_CompanyRegNo__c</errorDisplayField>
    <errorMessage>Company Registration no format is : 8 numeric or 2 alpha and 6 numeric</errorMessage>
</ValidationRule>