Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/validationRules/EEO_Gender_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>EEO_Gender_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>IF( RecordType.DeveloperName ==&apos;PAYE&apos;,
     ISBLANK(TEXT(IP_Candidate__r.ts2__EEO_Gender__c)),
       ISBLANK(IP_Candidate__r.sirenum__National_Insurance__c)
)</errorConditionFormula>
    <errorMessage>EEO Gender required on Candidate Page</errorMessage>
</ValidationRule>