Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/validationRules/Lock_Contact_Fields_2_clone.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Contact_Fields_2_clone</fullName>
    <active>true</active>
    <errorConditionFormula>IF(NOT(ISBLANK( IP_LastPassedToTempest__c ))&amp;&amp;  RecordType.DeveloperName ==&apos;PAYE&apos;, 
IF(ISCHANGED( IP_NewStarterTaxStatus__c )|| 
ISCHANGED( IP_StudentLoan__c ) 
,True,False) 
,False)</errorConditionFormula>
    <errorMessage>This can not be changed</errorMessage>
</ValidationRule>