Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/validationRules/Pass_to_tempest_update.validationRule-meta.xml
<ValidationRule>
    <fullName>Pass_to_tempest_update</fullName>
    <active>false</active>
    <errorConditionFormula>AND(RecordType.DeveloperName = &apos;PAYE&apos;,
	IP_PassToTempest__c = TRUE,
	OR( NOT(ISPICKVAL(IP_Status__c , &apos;Active&apos;)),
	    ISBLANK(TEXT( IP_NewStarterTaxStatus__c )),
	    NOT(ISBLANK(IP_Candidate__r.IP_MCPAYE__c)),
	    /*AND(IP_Candidate__r.IP_EarliestExpiringComplianceDate__c &lt; Today(),
                NOT(IP_Candidate__r.IP_CitizenshipGroup__c= &quot;Citizen of the UK&quot;)),
	    ISBLANK(TEXT( IP_StudentLoan__c )),*/
            /*NOT(ISBLANK( IP_Candidate__r.IP_WorkerStartDate__c )),*/
            ISBLANK( IP_Candidate__r.sirenum__National_Insurance__c ),
	    ISBLANK( IP_Candidate__r.Birthdate ),
	    ISBLANK(TEXT( IP_Candidate__r.ts2__EEO_Gender__c )),
	    ISBLANK(TEXT( IP_PaymentType__c )),
	    ISBLANK(IP_PayrollID__c),
	    NOT(ISBLANK(IP_Candidate__r.IP_MCPAYE__c)),
	    IF(AND(ISPICKVAL(IP_PaymentType__c,&apos;BACS&apos;),
	           ISBLANK( IP_BankAccountName__c ), 
		   OR(ISBLANK( IP_AccountNumber__c ),ISBLANK( IP_BuildingSocietyNumber__c ))
		   ), TRUE, FALSE) 
	  )
   )</errorConditionFormula>
    <errorMessage>Pass to Tempest can be checked only for Fully Compliant PAYE PAY profile</errorMessage>
</ValidationRule>