Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/validationRules/Pay_profile_lock_field_after_pass_to_te2.validationRule-meta.xml
<ValidationRule>
    <fullName>Pay_profile_lock_field_after_pass_to_te2</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				IP_LastPassedToTempest__c != NULL,
				ISCHANGED(IP_PayrollID__c)
				)</errorConditionFormula>
    <errorMessage>These fields are locked</errorMessage>
</ValidationRule>