Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/validationRules/Payment_Type_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Type_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>IF(TEXT(IP_PaymentType__c)==&apos;BACS&apos;,
IP_BankAccountName__c==null || IP_AccountNumber__c ==null
 ||  IP_SortCode__c ==null,
false)</errorConditionFormula>
    <errorMessage>If Payment Type is BACS-  Account Name, Account Number and Sort Code should not be blank</errorMessage>
</ValidationRule>