Frankbelford/uatv1ba/force-app/main/default/objects/IP_PayProfile__c/validationRules/Second_Tier_Candidate.validationRule-meta.xml
<ValidationRule>
    <fullName>Second_Tier_Candidate</fullName>
    <active>true</active>
    <errorConditionFormula>IP_Candidate__r.RecordType.Name ==&apos;2nd Tier Candidate&apos;</errorConditionFormula>
    <errorMessage>Pay profile can not be created for &apos;2nd tier candidate&apos;</errorMessage>
</ValidationRule>